--- a/src/public/css/content.css
+++ b/src/public/css/content.css
@@ -209,21 +209,39 @@ a {
     font-size: 85%;
 }
 
+strong {
+    color: white;
+    font-weight: bold;
+}
+
 .article-title {
     padding-top: 4vh;
     margin-bottom: 1vh;
-    width: 100%;
     font-size: 250%;
     font-weight: bold;
     text-align: left;
 }
 
+@media screen and (min-width: 1000px) {
+    .article-title {
+        width: 95%;
+    }
+    .description {
+        width: auto;
+        max-width: 85%;
+        text-align: justify;
+    }
+}
+
 .main .article .description {
-    margin: 2vh auto 3.5vh auto;
+    margin: 2vh auto 3.5vh 0;
 }
 
 .main .article .description p {
+    text-align: justify;
     opacity: 0.8;
+    font-size: 1.05rem;
+    line-height: 1.5rem;
 }
 
 .author-sharers-container {
@@ -309,19 +327,24 @@ a {
 }
 
 @media screen and(min-width:1000px) {
-    article {
+    .article {
         max-width: 60vw;
     }
 }
 
-.article .body p, .article .body a {
+.article .body p {
+    text-align: justify;
+    color: rgb(167, 167, 167);
+    margin-block-end: 4%;
+    margin-bottom: 4%;
     position: relative;
+}
+
+.article .body p, .article .body a {
+    font-size: 1.3rem;
     max-width: 85%;
-    line-height: 1.6rem;
-    opacity: 1;
+    line-height: 2rem;
     letter-spacing: 0.0rem;
-    margin-block-end: 3%;
-    margin-bottom: 3%;
     text-rendering: optimizeLegibility;
     word-break: break-word;
 }
@@ -764,6 +787,16 @@ a {
     }
     .article-title {
         font-size: 165%;
+    }
+    .article {
+        height: auto;
+    }
+    .article .main-media {
+        height: auto;
+    }
+    .article .main-media iframe, .article .main-media .caption {
+        margin: 1vh 0 2vh 0;
+        height: auto;
     }
     .suscribe {
         width: 100%;
