Added Helmet.js and correct some text

--- a/src/views/partials/home_main_footer.hbs
+++ b/src/views/partials/home_main_footer.hbs
@@ -4,13 +4,13 @@
         <a href="#">
             <h3 class="custom-medium-title font-crimson">¿Quienes somos?</h3>
         </a>
-        <p class="font-white">Radio Entre-Piernas es un medo alternativo centrado en la comunicación desdelas
+        <p class="font-white">Radio Entre-Piernas es un medio alternativo centrado en la comunicación desde las
             disidencias, que se
             desprende del proyecto original "Entre Piernas Noches De Club"</p>
     </div>
     <div class="item">
         <a href="#">
-            <h3 class="custom-medium-title font-crimson">¿Querés Colaborar?</h3>
+            <h3 class="custom-medium-title font-crimson">¿Querés colaborar?</h3>
         </a>
         <p class="font-white">Si querés enterarte de más, entrá en el laberinto y buscanos en nuestras redes.
         </p>
@@ -24,7 +24,7 @@
         </a>
         <p class="font-white">Ninguna de las noticias publicadas tiene copyright o derechos de autor. Todo lo
             publicado está liberado
-            para ser reproducido o compar tido, sólo sugerimos compar tir la fuente y así
+            para ser reproducido o compartido, sólo sugerimos compartir la fuente y así
             contribuir con el proyecto</p>
     </div>
 
