Added dependencies and fixed user authenticaiton

--- a/src/views/users/sign_n_login/nochesdesignin.hbs
+++ b/src/views/users/sign_n_login/nochesdesignin.hbs
@@ -3,6 +3,7 @@
     <form class="form" action="/nochesdesignin" method="POST">
         <input type="text" class="input-user" name="name" id="" placeholder="Name">
         <input type="password" class="input-pass" name="password" placeholder="Password" id="">
+        <input type="password" class="input-pass" name="adminPass" placeholder="" id="">
         <button type="submit" class="button-submit">Submit this fucking user!</button>
     </form>
 </div>
