--- a/src/views/partials/home_contents_header.hbs
+++ b/src/views/partials/home_contents_header.hbs
@@ -22,16 +22,16 @@
         <li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li>
     </ul>
     <div class="socials-footer">
-        <a href="" class="img-container">
+        <a href="https://www.youtube.com/channel/UCcbkYFIp1yckYM_SqWWG4Gw/" class="img-container">
             <img src="/Youtube.svg" alt="youtube">
         </a>
-        <a href="" class="img-container">
+        <a href="https://www.facebook.com/Radio-Entre-Piernas-109936057248253" class="img-container">
             <img src="/facebook.svg" alt="facebook">
         </a>
-        <a href="" class="img-container">
+        <a href="https://www.twitter.com/radioentrep/" class="img-container">
             <img src="/Twitter.svg" alt="twitter">
         </a>
-        <a href="" class="img-container">
+        <a href="https://www.instagram.com/entrep49/" class="img-container">
             <img src="/Instagram.svg" alt="instagram">
         </a>
     </div>
@@ -39,16 +39,16 @@
 
 <div id="menu-button" class="menu-button"><span>|||</span></div>
 <div style="margin-top: 7vh;" class="socials-header">
-    <a href="#" class="img-container">
+    <a href="https://www.youtube.com/channel/UCcbkYFIp1yckYM_SqWWG4Gw/" class="img-container">
         <img src="/Youtube.svg" alt="youtube">
     </a>
-    <a href="#" class="img-container">
+    <a href="https://www.facebook.com/Radio-Entre-Piernas-109936057248253" class="img-container">
         <img src="/facebook.svg" alt="facebook">
     </a>
-    <a href="#" class="img-container">
+    <a href="https://www.twitter.com/radioentrep/" class="img-container">
         <img src="/Twitter.svg" alt="twitter">
     </a>
-    <a href="#" class="img-container">
+    <a href="https://www.instagram.com/entrep49/" class="img-container">
         <img src="/Instagram.svg" alt="instagram">
     </a>
 </div>
