--- a/src/views/partials/home_main_footer.hbs
+++ b/src/views/partials/home_main_footer.hbs
@@ -29,16 +29,16 @@
     </div>
 
     <div class="socials-footer">
-        <a href="" class="img-container">
+        <a href="https://www.youtube.com/channel/UCcbkYFIp1yckYM_SqWWG4Gw/" class="img-container">
             <img src="/Youtube.svg" alt="youtube">
         </a>
-        <a href="" class="img-container">
+        <a href="https://www.facebook.com/Radio-Entre-Piernas-109936057248253" class="img-container">
             <img src="/facebook.svg" alt="facebook">
         </a>
-        <a href="" class="img-container">
+        <a href="https://www.twitter.com/radioentrep/" class="img-container">
             <img src="/Twitter.svg" alt="twitter">
         </a>
-        <a href="" class="img-container">
+        <a href="https://www.instagram.com/entrep49/" class="img-container">
             <img src="/Instagram.svg" alt="instagram">
         </a>
     </div>
