fixed misspelling in one button

--- a/src/views/partials/profile_all_emitions.hbs
+++ b/src/views/partials/profile_all_emitions.hbs
@@ -35,7 +35,7 @@
                 {{/each}}
 
             </div>
-            <button id="gimmi">Más Columnas</button>
+            <button id="gimmi">Más Emisiones</button>
 
         </div>
 
