Fixed minor problems in emitions
+ Removed body and title fields
+ Fixed problems between program, title, description
+ changed styles

--- a/src/views/partials/home_main_contents.hbs
+++ b/src/views/partials/home_main_contents.hbs
@@ -178,8 +178,9 @@
                 <a href="/contents/emitions/{{url}}">
                     <div class="info">
                         <span class="date">{{date}}</span>
-                        <span class="aux font-white">Programa:</span>
                         <h4 class="program">{{program}}</h4>
+                        <span class="font-white">{{number}}</span>
+
                     </div>
                 </a>
             </div>
