--- a/src/views/contents.hbs
+++ b/src/views/contents.hbs
@@ -58,8 +58,10 @@
             <div class="description font-white">{{{columns.description}}}</div>
             {{/if}}
             {{#if emitions}}
-            <h1 class="article-title font-white">{{emitions.title}}</h1>
+            <h1 class="article-title font-white">{{emitions.program}}</h1>
+            <span class="name font-white"><strong>{{emitions.number}}</strong></span>
             <div class="description font-white">{{{emitions.description}}}</div>
+
             {{/if}}
 
             <div class="author-sharers-container">
@@ -82,7 +84,6 @@
                             class="font-crimson">{{columns.program}}</strong></span>
                     {{/if}}
                     {{#if emitions}}
-                    <span class="name font-white">Programa: <strong>{{emitions.program}}</strong></span>
                     {{/if}}
 
 
