fixed problems in edit emitions

--- a/src/views/partials/profile_add_emitions.hbs
+++ b/src/views/partials/profile_add_emitions.hbs
@@ -9,10 +9,10 @@
             <label for="program">Escriba nombre del programa</label>
             <input id="program" class="n-input" type="text" name="program" placeholder="Escriba el nombre del programa">
 
-            <label for="number">Numero o título del programa</label>
+            <label for="number">Numero o título de la emisión</label>
             <input id="number" class="n-input" type="text" name="number" placeholder="Nombre o título del programa">
 
-            <label for="iframe">Inserte el iframe de su noticia</label>
+            <label for="iframe">Inserte el iframe de su Emision</label>
             <input id="iframe" class="n-input" type="text" name="iframe" placeholder="Inserte el Iframe de Youtube">
 
             <label for="caption">Inserte la fuente de la foto/video principal</label>
