--- a/src/views/partials/profile_edit_emition.hbs
+++ b/src/views/partials/profile_edit_emition.hbs
@@ -3,29 +3,29 @@
         <h2 class="Udatos-title">Editar Emisión</h2>
         <div class="n-form">
             <input type="hidden" name="id" id="_id" value="{{emition._id}}">
-            <label for="url">Escriba la URL de la noticia</label>
+            <label for="url">Escriba la URL de la emision</label>
             <input id="url" class="n-input" type="text" name="url" value="{{emition.url}}"
-                placeholder="Escriba la URL de la noticia">
-            <label for="title">Escriba su título</label>
+                placeholder="Escriba la URL de la emisión">
 
-            <input id="title" class="n-input" type="text" name="title" placeholder="Escriba un título"
-                value="{{emition.title}}">
-            <label for="description">Escriba una descripción para su emisión</label>
-
-            <textarea id="description" class="n-input-textarea" type="text" name="description"
-                placeholder="Escriba una descripción">{{emition.description}}</textarea>
-            <label for="iframe">Inserte el iframe de su emisión</label>
-            <input id="iframe" class="n-input" type="text" name="iframe" placeholder="Inserte el Iframe de Youtube"
-                value="{{emition.iframe}}">
             <label for="program">Escriba el nombre del programa</label>
             <input id="program" class="n-input" type="text" name="program" placeholder="Inserte el nombre del programa"
                 value="{{emition.program}}">
-            <label for="caption">Inserte la fuente de la foto/video principal</label>
-            <input id="caption" class="n-input" type="text" name="caption" value="{{emition.caption}}" placeholder="Inserte la fuente">
 
-            <label for="content">Escriba el cuerpo de la noticia</label>
-            <textarea class="photo-input" name="content" id="editor">{{emition.body}}</textarea>
-            <input type="hidden" id="thumbnail" name="thumbnail" value="{{emition.thumbnail}}">
+            <label for="number">Numero o título de la emisión</label>
+            <input id="number" class="n-input" type="text" name="number" placeholder="Nombre o título del programa">
+
+            <label for="iframe">Inserte el iframe de su emisión</label>
+            <input id="iframe" class="n-input" type="text" name="iframe" placeholder="Inserte el Iframe de Youtube"
+                value="{{emition.iframe}}">
+            <label for="caption">Inserte la fuente de la foto/video principal</label>
+
+            <input id="caption" class="n-input" type="text" name="caption" value="{{emition.caption}}"
+                placeholder="Inserte la fuente">
+
+            <label for="description">Escriba el una breve descripción</label>
+            <textarea id="description" class="n-input-textarea" type="text" name="description"
+                placeholder="Escriba una descripción">{{emition.description}}</textarea>
+
             <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-submit-block">BUSCAR
                 IMAGEN</button>
 
@@ -45,7 +45,7 @@
     // Declaring basic elements to interact with
     const CROPPER_RATIO = 1.4;
     const front_url = document.getElementById('url');
-    const title = document.getElementById('title');
+    const number = document.getElementById('number');
     const description = document.getElementById('description');
     const program = document.getElementById('program');
     const iframe = document.getElementById('iframe');
@@ -56,15 +56,6 @@
 
     //  Creating a CKEDITOR instance only when everithing is loaded
     window.onload = () => {
-
-        const BlogEditor = CKEDITOR.replace('editor', {
-            width: '100%',
-            height: '75vh',
-            embed_provider: '//ckeditor.iframe.ly/api/oembed?url={url}&callback={callback}',
-            extraPlugins: 'embed,autoembed,image2',
-            removeButtons: 'Source,Save,Templates,NewPage,Preview,Print,PasteText,Find,Replace,SelectAll,Form,Checkbox,Radio,TextField,Textarea,Select,Button,HiddenField,Subscript,Superscript,CopyFormatting,RemoveFormat,NumberedList,BulletedList,Outdent,Indent,CreateDiv,BidiLtr,BidiRtl,Language,Anchor,Flash,Table,HorizontalRule,SpecialChar,PageBreak,Font,FontSize,TextColor,BGColor,ShowBlocks,About,Styles'
-
-        });
 
         const DescriptionEditor = CKEDITOR.replace('description', {
             width: '100%',
@@ -87,13 +78,8 @@
 
     senderButton.addEventListener('click', function (e) {
         e.preventDefault();
-        let dataLength = CKEDITOR.instances.editor.getData();
-        dataLength = dataLength.length;
-        if (title.value.length < 7) {
+        if (number.value.length < 7) {
             alert("El título debe tener al menos 7 carácteres de largo");
-        }
-        else if (dataLength < 60) {
-            alert("El cuerpo de la noticia es demasiado corto");
         } else {
             sendToServer();
         }
@@ -125,13 +111,11 @@
     }
 
     async function appendingDataIntoFormAndFetchingToServer() {
-        let body = await CKEDITOR.instances.editor.getData();
         let description = await CKEDITOR.instances.description.getData();
         var form = new FormData();
         form.append('url', front_url.value);
-        form.append('title', title.value);
+        form.append('number', number.value);
         form.append('description', description);
-        form.append('body', body);
         form.append('program', program.value);
         form.append('iframe', iframe.value);
         form.append('caption', caption.value);
@@ -200,7 +184,7 @@
                 });
         }
         if (!binaryData) {
-            form.append('thumbnail', thumbnail.value);
+            //form.append('thumbnail', thumbnail.value);
             fetch(`/emitions/partialedit/${emitionId.value}`, { method: "POST", body: form })
                 .then(function (response) {
                     console.log(response.status);
