Small changes in content.css

--- a/src/views/contents.hbs
+++ b/src/views/contents.hbs
@@ -59,7 +59,7 @@
             {{/if}}
             {{#if emitions}}
             <h1 class="article-title font-white">{{emitions.program}}</h1>
-            <span class="name font-white"><strong>{{emitions.number}}</strong></span>
+            <span class="name font-white">{{emitions.number}}</span>
             <div class="description font-white">{{{emitions.description}}}</div>
 
             {{/if}}
@@ -83,8 +83,7 @@
                     <span class="name font-white">Programa: <strong
                             class="font-crimson">{{columns.program}}</strong></span>
                     {{/if}}
-                    {{#if emitions}}
-                    {{/if}}
+                  
 
 
                 </div>
