--- a/src/public/css/content.css
+++ b/src/public/css/content.css
@@ -217,7 +217,7 @@ strong {
 .article-title {
     padding-top: 4vh;
     margin-bottom: 1vh;
-    font-size: 250%;
+    font-size: 300%;
     font-weight: bold;
     text-align: left;
 }
@@ -228,13 +228,13 @@ strong {
     }
     .description {
         width: auto;
-        max-width: 85%;
+        max-width: 80%;
         text-align: justify;
     }
 }
 
 .main .article .description {
-    margin: 2vh auto 3.5vh 0;
+    margin: 2rem auto 3.5vh 0;
 }
 
 .main .article .description p {
@@ -242,6 +242,7 @@ strong {
     opacity: 0.8;
     font-size: 1.05rem;
     line-height: 1.5rem;
+    margin-block-end: 1.5%;
 }
 
 .author-sharers-container {
