--- a/src/views/partials/home_main_contents.hbs
+++ b/src/views/partials/home_main_contents.hbs
@@ -10,9 +10,19 @@
                     <div class="info">
                         <span class="headline">{{news.[0].headline}}</span>
                         <h4 class="title">{{news.[0].title}}</h4>
-                        <span class="author">Por <strong class="font-white">{{news.[0].author}}</strong> |
+                        {{#unless news.[0].alt_author}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[0].author}}</strong> |
                             {{news.[0].date}}</span>
+                        {{else}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[0].alt_author}}</strong> desde
+                            <strong class="font-crimson">{{news.[0].alt_source}}</strong>
+                        </span>
+                        <br>
+                        <span class="author">{{news.[0].date}}</span>
+
+                        {{/unless}}
                     </div>
+
                 </a>
             </div>
             {{/if}}
@@ -26,8 +36,17 @@
                     <div class="info">
                         <span class="headline">{{news.[1].headline}}</span>
                         <h4 class="title">{{news.[1].title}}</h4>
-                        <span class="author">Por <strong class="font-white">{{news.[1].author}}</strong> |
+                        {{#unless news.[1].alt_author}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[1].author}}</strong> |
                             {{news.[1].date}}</span>
+                        {{else}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[1].alt_author}}</strong> desde
+                            <strong class="font-crimson">{{news.[1].alt_source}}</strong>
+                        </span>
+                        <br>
+                        <span class="author">{{news.[1].date}}</span>
+
+                        {{/unless}}
                     </div>
                 </a>
             </div>
@@ -41,8 +60,17 @@
                     <div class="info">
                         <span class="headline">{{news.[2].headline}}</span>
                         <h4 class="title">{{news.[2].title}}</h4>
-                        <span class="author">Por <strong class="font-white">{{news.[2].author}}</strong> |
+                        {{#unless news.[2].alt_author}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[2].author}}</strong> |
                             {{news.[2].date}}</span>
+                        {{else}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[2].alt_author}}</strong> desde
+                            <strong class="font-crimson">{{news.[2].alt_source}}</strong>
+                        </span>
+                        <br>
+                        <span class="author">{{news.[2].date}}</span>
+
+                        {{/unless}}
                     </div>
                 </a>
             </div>
@@ -57,8 +85,17 @@
                     <div class="info">
                         <span class="headline">{{news.[3].headline}}</span>
                         <h4 class="title">{{news.[3].title}}</h4>
-                        <span class="author">Por <strong class="font-white">{{news.[3].author}}</strong> |
+                        {{#unless news.[3].alt_author}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[3].author}}</strong> |
                             {{news.[3].date}}</span>
+                        {{else}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[3].alt_author}}</strong> desde
+                            <strong class="font-crimson">{{news.[3].alt_source}}</strong>
+                        </span>
+                        <br>
+                        <span class="author">{{news.[3].date}}</span>
+
+                        {{/unless}}
                     </div>
                 </a>
             </div>
@@ -72,8 +109,17 @@
                     <div class="info">
                         <span class="headline">{{news.[4].headline}}</span>
                         <h4 class="title">{{news.[4].title}}</h4>
-                        <span class="author">Por <strong class="font-white">{{news.[3].author}}</strong> |
-                            {{news.[3].date}}</span>
+                        {{#unless news.[4].alt_author}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[4].author}}</strong> |
+                            {{news.[4].date}}</span>
+                        {{else}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[4].alt_author}}</strong> desde
+                            <strong class="font-crimson">{{news.[4].alt_source}}</strong>
+                        </span>
+                        <br>
+                        <span class="author">{{news.[4].date}}</span>
+
+                        {{/unless}}
                     </div>
                 </a>
             </div>
@@ -87,8 +133,17 @@
                     <div class="info">
                         <span class="headline">{{news.[5].headline}}</span>
                         <h4 class="title">{{news.[5].title}}</h4>
-                        <span class="author">Por <strong class="font-white">{{news.[5].author}}</strong> |
+                        {{#unless news.[5].alt_author}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[5].author}}</strong> |
                             {{news.[5].date}}</span>
+                        {{else}}
+                        <span class="author">Por <strong class="font-crimson">{{news.[5].alt_author}}</strong> desde
+                            <strong class="font-crimson">{{news.[5].alt_source}}</strong>
+                        </span>
+                        <br>
+                        <span class="author">{{news.[5].date}}</span>
+                        {{/unless}}
+
                     </div>
                 </a>
             </div>
