--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -110,12 +110,12 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    background-color: rgba(0, 0, 0, 0.65);
+    background-color: rgba(0, 0, 0, 0.70);
     transition: background-color 0.2s ease-in-out;
 }
 
 .news .article-big:hover .info {
-    background-color: rgba(0, 0, 0, 0.755);
+    background-color: rgba(0, 0, 0, 0.85);
 }
 
 .news img {
@@ -230,7 +230,8 @@ section {
 }
 
 .news .article-big .title {
-    width: 85%;
+    padding: 0.5rem;
+    width: 100%;
     color: var(--color-normal);
     display: block;
     font-size: 200%;
@@ -647,6 +648,9 @@ a {
 }
 
 @media screen and (max-width: 560px) {
+    .news .article-big .headline{
+        font-size: 100%;
+    }
     .section-title_full {
         text-align: center;
     }
