--- a/src/views/partials/home_main_contents.hbs
+++ b/src/views/partials/home_main_contents.hbs
@@ -184,36 +184,60 @@
         <div class="more-news-container">
             {{#if news.[6]}}
             <h3 class="section-title-medium centered">Más Noticias</h3>
-
-            <div class="aside-article">
-                <span class="date">{{news.[6].date}}</span>
-                <h4 class="title">{{news.[6].title}}</h4>
-                <span class="author">Por: <strong class="font-white">{{news.[6].author}}</strong></span>
-            </div>
+            
+            <a href="/contents/news/{{news.[6].url}}">
+                <div class="aside-article">
+                    <span class="date">{{news.[6].date}}</span>
+                    <h4 class="title">{{news.[6].title}}</h4>
+                    {{#unless news.[6].alt_author}}
+                    <span class="author">Por: <strong class="font-white">{{news.[6].author}}</strong></span>
+                    {{else}}
+                    <span class="author">Por: <strong class="font-white">{{news.[6].alt_author}}</strong></span>
+                    {{/unless}}
+                </div>
+            </a>
             {{/if}}
 
             {{#if news.[7]}}
-            <div class="aside-article">
-                <span class="date">{{news.[7].date}}</span>
-                <h4 class="title">{{news.[7].title}}</h4>
-                <span class="author">Por: <strong class="font-white">{{news.[7].author}}</strong></span>
-            </div>
+            <a href="/contents/news/{{news.[7].url}}">
+                <div class="aside-article">
+                    <span class="date">{{news.[7].date}}</span>
+                    <h4 class="title">{{news.[7].title}}</h4>
+                    {{#unless news.[7].alt_author}}
+                    <span class="author">Por: <strong class="font-white">{{news.[7].author}}</strong></span>
+                    {{else}}
+                    <span class="author">Por: <strong class="font-white">{{news.[7].alt_author}}</strong></span>
+                    {{/unless}}
+                </div>
+            </a>
             {{/if}}
 
             {{#if news.[8]}}
+            <a href="/contents/news/{{news.[8].url}}">  
             <div class="aside-article">
                 <span class="date">{{news.[8].date}}</span>
                 <h4 class="title">{{news.[8].title}}</h4>
+                {{#unless news.[8].alt_author}}
                 <span class="author">Por: <strong class="font-white">{{news.[8].author}}</strong></span>
+                {{else}}
+                <span class="author">Por: <strong class="font-white">{{news.[8].alt_author}}</strong></span>
+                {{/unless}}
             </div>
+            </a>
             {{/if}}
 
             {{#if news.[9]}}
-            <div class="aside-article">
-                <span class="date">{{news.[9].date}}</span>
-                <h4 class="title">{{news.[9].title}}</h4>
-                <span class="author">Por: <strong class="font-white">{{news.[9].author}}</strong></span>
-            </div>
+            <a href="/contents/news/{{news.[9].url}}">
+                <div class="aside-article">
+                    <span class="date">{{news.[9].date}}</span>
+                    <h4 class="title">{{news.[9].title}}</h4>
+                    {{#unless news.[9].alt_author}}
+                    <span class="author">Por: <strong class="font-white">{{news.[9].author}}</strong></span>
+                    {{else}}
+                    <span class="author">Por: <strong class="font-white">{{news.[9].alt_author}}</strong></span>
+                    {{/unless}}
+                </div>
+            </a>
             {{/if}}
         </div>
     </section>
