Minor updates before AWS
+ Changed some Styles errors
+ Commented "contacts" links

--- a/src/public/css/content.css
+++ b/src/public/css/content.css
@@ -228,7 +228,7 @@ strong {
     }
     .description {
         width: auto;
-        max-width: 85;
+        max-width: 85%;
         text-align: justify;
     }
 }
