--- a/src/views/partials/home_contents_header.hbs
+++ b/src/views/partials/home_contents_header.hbs
@@ -8,7 +8,7 @@
         <li><a href="/all/news" class="nav-link font-crimson">NOTICIAS</a></li>
         <li><a href="/all/columns" class="nav-link font-crimson">RECORTES</a></li>
         <li><a href="/all/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-        <li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li>
+        <!--li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li-->
     </ul>
 
 </nav>
