--- a/src/views/contents.hbs
+++ b/src/views/contents.hbs
@@ -6,7 +6,7 @@
         <li><a href="/all/news" class="nav-link font-crimson">NOTICIAS</a></li>
         <li><a href="/all/columns" class="nav-link font-crimson">RECORTES</a></li>
         <li><a href="/all/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-        <li><a href="/all/contact" class="nav-link font-crimson">CONTACTO</a></li>
+        <!--li><a href="/all/contact" class="nav-link font-crimson">CONTACTO</a></li-->
     </ul>
 
 </nav>
@@ -20,7 +20,7 @@
         <li><a href="/all/news" class="nav-link font-crimson">NOTICIAS</a></li>
         <li><a href="/all/columns" class="nav-link font-crimson">RECORTES</a></li>
         <li><a href="/all/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-        <li><a href="/all/contact" class="nav-link font-crimson">CONTACTO</a></li>
+        <!--li><a href="/all/contact" class="nav-link font-crimson">CONTACTO</a></li-->
     </ul>
     <div class="socials-footer">
         <a href="https://www.youtube.com/channel/UCcbkYFIp1yckYM_SqWWG4Gw/" class="img-container">
